--- a/app/src/main/res/layout/activity_suggest_screen.xml
+++ b/app/src/main/res/layout/activity_suggest_screen.xml
@@ -92,11 +92,12 @@
         android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Emailx">
+        android:hint="Email">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
             />
 
     </com.google.android.material.textfield.TextInputLayout>
